# raytracer

./: .gitignore  Cargo.toml  README.md  cube.mesh
fonts/: LICENSE.md
meshes/: cube.raw
raytracer-impl/: .gitignore  Cargo.toml
raytracer-impl/src/: bvh.rs  implementation.rs  lib.rs  lights.rs  materials.rs  matrix.rs  obj_data.rs  obj_format.rs  samples.rs  shapes.rs  texture.rs  transform.rs  types.rs  util.rs  viewport.rs
raytracer-impl/src/shapes/: bvh.rs  mesh.rs  mod.rs  plane.rs  sphere.rs
raytracer-obj/: Cargo.toml
raytracer-obj/src/: builder.rs  color_map.rs  format.rs  lib.rs
raytracer-samples/: Cargo.toml
raytracer-samples/meshes/Destroyer-K/: Standarddestroyer.mtl
raytracer-samples/meshes/Dreadnaught/: Dreadnaught.mtl
raytracer-samples/meshes/Interceptor-T/: Heavyinterceptor.mtl
raytracer-samples/meshes/skeleton/: SKELETON.mtl
raytracer-samples/src/: camera.rs  lib.rs  samples.rs  scene.rs  scene_dootdoot.rs  scene_dreadnaught.rs  scene_entity_transform_test.rs  scene_interceptor_spin.rs  scene_point_cloud.rs  scene_uv_test.rs  texture_loader.rs  util.rs
src/: app.rs  format.rs  frame_history.rs  implementation.rs  job_complete.rs  job_constructing.rs  job_running.rs  logger.rs  logger_view.rs  main.rs  materials.rs  raytracer.rs  render.rs  rgba.rs  settings.rs  thread_stats.rs  timer.rs  viewport.rs
src/raytracer/: implementation.rs  lights.rs  materials.rs  mesh_file.rs  mesh_formats.rs  mod.rs  obj_format.rs  ray.rs  rgb.rs  samples.rs  shapes.rs  types.rs  vec3.rs  viewport.rs
