[package]
name = "raytracer-ui"
version = "0.1.0"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]
edition = "2018"

[dependencies]
raytracer-impl = { path = "./raytracer-impl" }
raytracer-samples = { path = "./raytracer-samples" }
eframe = "0.19.0" # egui, epi and web+native backends
serde = { version = "1", features = ["derive"] } # state serialization
flume = "0.10.13"
rand = "0.6"

[features]
default = ["eframe/persistence"]

[patch.crates-io]
# Use the bleeding edge version of `eframe`
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }