[package]
name = "raytracer-ui"
version = "0.1.0"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]
edition = "2024"

[dependencies]
raytracer-impl = { path = "./raytracer-impl" }
raytracer-samples = { path = "./raytracer-samples" }
eframe = "0.33.0" # egui, epi and web+native backends
serde = { version = "1", features = ["derive"] } # state serialization
flume = "0.10.13" # mpmc / cross thread work queues
rand = "0.8"
rand_xorshift = "0.3"
cancellation = "0.1"

[features]
default = ["eframe/persistence"]

[patch.crates-io]
# Use the bleeding edge version of `eframe`
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }