[workspace]
members = ["raytracer-impl", "raytracer-samples", "raytracer-obj"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]

[workspace.dependencies]
log = "0.4"
rand = "0.9"

[package]
name = "raytracer-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rand.workspace = true
log.workspace = true
raytracer-impl = { path = "./raytracer-impl" }
raytracer-samples = { path = "./raytracer-samples" }
eframe = "0.33.0" # egui, epi and web+native backends
serde = { version = "1", features = ["derive"] } # state serialization
flume = "0.10.13" # mpmc / cross thread work queues
rand_xorshift = "0.4"
cancellation = "0.1"
time-format = "1.2.2"

[features]
default = ["eframe/persistence"]

[patch.crates-io]
# Use the bleeding edge version of `eframe`
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
